--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm":"6.4.1"
   },
   "scripts": {
-    "start":"nade index.js"
+    "start":"node index.js"
   },
   "author": "Ashutosh",
   "license": "ISC",
