--- a/package.json
+++ b/package.json
@@ -3,16 +3,23 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "engines":{
-    "node":"8.15.0",
-    "npm":"6.4.1"
+  "engines": {
+    "node": "8.15.0",
+    "npm": "6.4.1"
   },
   "scripts": {
-    "start":"node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "Ashutosh",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "body-parser": "^1.18.3",
+    "cookie-session": "^2.0.0-beta.3",
+    "express": "^4.16.4",
+    "nodemon": "^1.18.10",
+    "passport": "^0.4.0",
+    "passport-google-oauth": "^1.0.0",
+    "passport-google-oauth20": "^1.0.0"
   }
 }
