--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js"
+    
   },
   "author": "Ashutosh",
   "license": "ISC",
@@ -17,6 +18,7 @@
     "body-parser": "^1.18.3",
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.4",
+    "mongoose": "^5.4.13",
     "nodemon": "^1.18.10",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
